# LC-3-Rust

./: Cargo.toml
src/: main.rs
src/hardware/instruction/: mod.rs
src/hardware/register/: mod.rs
