[package]
name = "LC-3"
version = "0.1.0"
authors = ["Rodrigo Araujo <rod.dearaujo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
termios = "0.3.3"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1
lto = true
opt-level = "z" # Optimize for size.
panic = "abort"
strip = true

